<resources>
    <string name="app_name">AndroidChatter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Friend Username</string>
    <string name="empty"></string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="Messages">Messages</string>
    <string name="Send">Send</string>
    <string name="yourUsername">Username</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="Email">E-Mail</string>
    <string name="SignUP" />
    <string name="signup">SignUp</string>
    <string name="local_service_stopped">Local service stopped</string>
    <string name="not_connected_to_service">not connected to service</string>
    <string name="not_connected_to_network">not connected to network</string>
    <string name="make_sure_username_and_password_correct">make sure username and password are correct</string>
    <string name="fill_both_username_and_password">fill both username and password</string>
    <string name="OK">every thing is okay</string>
    <string name="sign_up">SignUp </string>
    <string name="exit_application">exit application</string>

    <string name="signup_successfull">SignUp Successful </string>
    <string name="signup_username_crashed">SignUp Crashed </string>
    <string name="signup_failed">SignUp Failed </string>

    <string name="username_and_password_length_short">Username or Password Length is short </string>

    <string name="signup_type_same_password_in_password_fields">Password does not match </string>

    <string name="signup_fill_all_fields">please fill all fields </string>
    <string name="new_friend_request_exist">New Friend Request </string>

    <string name="approve_selected_friends">Approved selected friend</string>
    request_sent
    <string name="request_sent">request sent</string>
    add_new_friend
    <string name="add_new_friend">Add Friend</string>
    <string name="type_friend_username">Add Friend</string>
    <string name="message_cannot_be_sent">message cannot be send</string>



</resources>
